# docs/swagger.yaml
@@ -24,6 +24,8 @@ definitions:
         type: string
       clave:
         type: string
+      count:
+        type: integer
       detalle:
         $ref: '#/definitions/model.Detalle'
       direccion:
@@ -59,6 +61,57 @@ definitions:
       usuario:
         type: string
     type: object
+  model.Empresa:
+    properties:
+      celular:
+        type: string
+      certificadoClave:
+        type: string
+      certificadoRuta:
+        type: string
+      claveApiSunat:
+        type: string
+      claveSol:
+        type: string
+      condiciones:
+        type: string
+      domicilio:
+        type: string
+      email:
+        type: string
+      giroComercial:
+        type: integer
+      idApiSunat:
+        type: string
+      idEmpresa:
+        type: integer
+      image:
+        items:
+          type: integer
+        type: array
+      imagenRuta:
+        type: string
+      nombre:
+        type: string
+      nombreComercial:
+        type: string
+      numeroDocumento:
+        type: string
+      paginaWeb:
+        type: string
+      razonSocial:
+        type: string
+      telefono:
+        type: string
+      terminos:
+        type: string
+      tipoDocumento:
+        type: integer
+      ubigeo:
+        type: integer
+      usuarioSol:
+        type: string
+    type: object
   model.Error:
     properties:
       message:
@@ -76,6 +129,29 @@ definitions:
 info:
   contact: {}
 paths:
+  /empresa:
+    get:
+      consumes:
+      - application/json
+      description: Obtener la información de la empresa
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Empresa'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Para obtener la empresa actual
+      tags:
+      - Empresa
   /login:
     get:
       consumes:
